--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,25 @@
-pom.xml
-*jar
-/lib/
-/classes/
-/targets/
+build.output.folder/
+targets/
+target/
+lib/
+classes/
+checkouts/
+
+*.class
+*.asc
+*.jar
+*.zip
+*.gz
+
 .lein-deps-sum
+.lein-failures
+.lein-plugins
+.lein-repl-history
+
+
+
+._.DS_Store
+.DS_Store
+.svn
+
+
