--- a/ivy.xml
+++ b/ivy.xml
@@ -17,7 +17,12 @@
     <dependency org="com.zotoh" name="blason-support" rev="1.0.0-SNAPSHOT" conf="libjar->libjar"/>
 
     <!-- clojure  -->
+    <dependency org="org.clojure" name="math.numeric-tower" rev="0.0.2" conf="libjar->default"/>
+    <dependency org="org.clojure" name="math.combinatorics" rev="0.0.4" conf="libjar->default"/>
     <dependency org="org.clojure" name="tools.logging" rev="0.2.6" conf="libjar->default"/>
+    <dependency org="org.clojure" name="data.codec" rev="0.1.0" conf="libjar->default"/>
+    <dependency org="org.clojure" name="java.jdbc" rev="0.3.0-alpha4" conf="libjar->default"/>
+    <dependency org="org.clojure" name="data.json" rev="0.2.2" conf="libjar->default"/>
     <dependency org="org.clojure" name="clojure" rev="1.5.1" conf="libjar->default"/>
 
   </dependencies>
