--- a/build.xml
+++ b/build.xml
@@ -77,6 +77,7 @@
       <arg value="comzotohcljc.blason.impl.execvisor" />
       <arg value="comzotohcljc.blason.impl.deployer" />
       <arg value="comzotohcljc.blason.impl.kernel" />
+      <arg value="comzotohcljc.blason.kernel.container" />
       <arg value="comzotohcljc.blason.impl.sysobjs" />
     </java>
   </target>
